# lockbox-messenger

./: .gitignore  LICENSE  README.md  docker-compose.yml  frontend_class-diagram.txt  package-lock.json  package.json  schedule.gantt  time-tracking
backend/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package-lock.json  package.json  test_docker-compose.yml  tsconfig.json
backend/db/: init.sql
backend/server/: .env  .env.example  .env.test  .env_test  Dockerfile  SIGNAL-PROTOCOL-BACKEND.md  jest.config.ts  package-lock.json  package.json  test.env  tsconfig.build.json  tsconfig.json
backend/server/src/: createServer.ts  db.ts  server.ts  startCron.ts
backend/server/src/config/: expressApp.ts  wss.ts
backend/server/src/controllers/: authController.ts  keyControllers.ts  socialControllers.ts
backend/server/src/middleware/: auth.ts  session.ts
backend/server/src/models/: User.ts
backend/server/src/routes/: auth.ts  keys.ts  messages.ts  social.ts
backend/server/src/server/: clients.js  expressApp.js  expressApp.ts  index.js  router.js  server.ts  wss.js  wss.ts
backend/server/src/services/: redis.ts  signalKeyService.ts
backend/server/src/types/: express.d.ts  index.d.ts
backend/server/src/utils/: logger.ts
backend/server/src/websocket/handlers/: messages.ts
backend/server/tests/: setup.js  setupAfterEnv.ts  teardownGlobal.ts
backend/server/tests/e2e/: sendMessage.test.ts
backend/server/tests/e2e/chats/: sendMessage.test.ts
backend/server/tests/integration/: expressApp.test.ts  wss.test.ts
backend/src/: main.rs  signal.ts
(+203 files in other folders)
