[package]
name = "websocket-chat-broker"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix = "0.13"
actix-broker = "0.4"
actix-files = "0.6"
actix-web = "4.5"
actix-web-actors = "4.2"

env_logger = "0.11"
log = "0.4"
rand = "0.8"
